Implementação completa da lista circular duplamente encadeada